k8s/ollama/ollama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 11434

---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ollama.r.ss
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
  - name: api
    port: 80
    targetPort: api
